--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <style>
         body {
             background: transparent;
+            font-size: large;
             padding: 0;
             margin: 0;
             width: 100vw;
@@ -21,36 +22,41 @@
 
 <body id="body">
     <div id="controls">
-        Select image: <input type="file" id="file" accept="image/*"/>
-        Speed: <input type="number" id="speed" min="0.1" max="10" step="0.1"/>
-        <span>Double click anywhere on page to show/hide controls.</span>
+        <div>Double click anywhere on page to show/hide controls.</div>
+        <div>Select image: <input type="file" id="file" accept="image/*"/></div>
+        <div>Speed: <input type="number" id="speed" min="0.1" max="10" step="0.1"/></div>
+        <div>Size: <input type="range" id="size" min="0.01" max="1.0" step="0.01"/></div>
     </div>
 </body>
 
 <script>
     const body = document.getElementById('body');
-    const speedInput = document.getElementById('speed');
     const hide = document.getElementById('hide');
-    const img = document.createElement('img');
     const fileInput = document.getElementById('file');
+    const speedInput = document.getElementById('speed');
+    const sizeInput = document.getElementById('size');
     const FPS = 60;
-    body.appendChild(img)
+
     let ix = window.innerWidth * Math.random(), 
         iy = window.innerHeight * Math.random(), 
         dx = Math.random() > 0.5, 
         dy = Math.random() > 0.5, 
-        speed;
+        size = Number(window.localStorage.getItem('size')) || 1.0, 
+        speed = Number(window.localStorage.getItem('speed')) || 3.0;
+    const img = document.createElement('img');
+    body.appendChild(img)
 
     window.addEventListener('load', () => {
         filedata = window.localStorage.getItem('file');
-        speed = Number(window.localStorage.getItem('speed')) || 3.0;
         if (filedata) {
             img.src = filedata;
             document.getElementById('controls').style.visibility = 'hidden';
         }        
         speedInput.setAttribute('value', speed);
+        sizeInput.setAttribute('value', size);
         window.requestAnimationFrame(animate);
     })
+    img.addEventListener('load', updateImageSize);
     body.addEventListener('dblclick', () => {
         const controls = document.getElementById('controls')
         controls.style.visibility = controls.style.visibility == 'visible' ? 'hidden' : 'visible';
@@ -58,8 +64,22 @@
     speedInput.addEventListener('input', event => {
         let newVal = Number(event.data);
         if (newVal > 0) {
-            speed = Number(event.data);
+            speed = newVal;
             window.localStorage.setItem('speed', speed);
+        }
+    })
+
+    function updateImageSize() {
+        img.style.maxHeight = img.naturalHeight * size + 'px';
+        img.style.maxWidth = img.naturalWidth * size + 'px';
+    }
+
+    sizeInput.addEventListener('input', event => {
+        let newVal = Number(sizeInput.value);
+        if (newVal > 0) {
+            size = newVal;
+            window.localStorage.setItem('size', size);
+            updateImageSize();
         }
     })
     fileInput.addEventListener('change', event => {
