--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
         body {
             background: transparent;
-            font-size: large;
+            font-size: 24px;
             padding: 0;
             margin: 0;
             width: 100vw;
@@ -22,7 +22,7 @@
 
 <body id="body">
     <div id="controls">
-        <div>Double click anywhere on page to show/hide controls.</div>
+        <div>Right click anywhere on page to show/hide controls.</div>
         <div>Select image: <input type="file" id="file" accept="image/*"/></div>
         <div>Speed: <input type="number" id="speed" min="0.1" max="10" step="0.1"/></div>
         <div>Size: <input type="range" id="size" min="0.01" max="1.0" step="0.01"/></div>
@@ -57,8 +57,9 @@
         window.requestAnimationFrame(animate);
     })
     img.addEventListener('load', updateImageSize);
-    body.addEventListener('dblclick', () => {
-        const controls = document.getElementById('controls')
+    body.addEventListener('contextmenu', (event) => {
+        event.preventDefault();
+        const controls = document.getElementById('controls');
         controls.style.visibility = controls.style.visibility == 'visible' ? 'hidden' : 'visible';
     })
     speedInput.addEventListener('input', event => {
