--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 
 <head>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+
         body {
             background: transparent;
-            font-size: 24px;
             padding: 0;
             margin: 0;
             width: 100vw;
@@ -14,8 +15,22 @@
             overflow: hidden;
         }
 
+        #controls {
+            font-family: 'Varela Round', sans-serif;
+            font-size: 24px;
+            line-height: 1.5em;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            margin: 24px;
+            z-index: 1;
+        }
+
         img {
             position: absolute;
+            z-index: -1;
         }
     </style>
 </head>
@@ -24,7 +39,7 @@
     <div id="controls">
         <div>Right click anywhere on page to show/hide controls.</div>
         <div>Select image: <input type="file" id="file" accept="image/*"/></div>
-        <div>Speed: <input type="number" id="speed" min="0.1" max="10" step="0.1"/></div>
+        <div>Speed: <input type="range" id="speed" min="0.1" max="10" step="0.01"/></div>
         <div>Size: <input type="range" id="size" min="0.01" max="1.0" step="0.01"/></div>
     </div>
 </body>
@@ -44,7 +59,7 @@
         size = Number(window.localStorage.getItem('size')) || 1.0, 
         speed = Number(window.localStorage.getItem('speed')) || 3.0;
     const img = document.createElement('img');
-    body.appendChild(img)
+    body.appendChild(img);
 
     window.addEventListener('load', () => {
         filedata = window.localStorage.getItem('file');
@@ -55,20 +70,20 @@
         speedInput.setAttribute('value', speed);
         sizeInput.setAttribute('value', size);
         window.requestAnimationFrame(animate);
-    })
+    });
     img.addEventListener('load', updateImageSize);
     body.addEventListener('contextmenu', (event) => {
         event.preventDefault();
         const controls = document.getElementById('controls');
         controls.style.visibility = controls.style.visibility == 'visible' ? 'hidden' : 'visible';
-    })
+    });
     speedInput.addEventListener('input', event => {
-        let newVal = Number(event.data);
+        let newVal = event.target.valueAsNumber;
         if (newVal > 0) {
             speed = newVal;
             window.localStorage.setItem('speed', speed);
         }
-    })
+    });
 
     function updateImageSize() {
         img.style.maxHeight = img.naturalHeight * size + 'px';
@@ -76,7 +91,7 @@
     }
 
     sizeInput.addEventListener('input', event => {
-        let newVal = Number(sizeInput.value);
+        let newVal = event.target.valueAsNumber;
         if (newVal > 0) {
             size = newVal;
             window.localStorage.setItem('size', size);
