--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
             z-index: 1;
         }
 
+        label {
+            display: inline-block;
+            width: 80px;
+        }
+
         img {
             position: absolute;
             z-index: -1;
@@ -38,9 +43,9 @@
 <body id="body">
     <div id="controls">
         <div>Right click anywhere on page to show/hide controls.</div>
-        <div>Select image: <input type="file" id="file" accept="image/*"/></div>
-        <div>Speed: <input type="range" id="speed" min="0.1" max="10" step="0.01"/></div>
-        <div>Size: <input type="range" id="size" min="0.01" max="1.0" step="0.01"/></div>
+        <div><label for="file">Image</label> <input type="file" id="file" accept="image/*"/></div>
+        <div><label for="speed">Speed</label> <input type="range" id="speed" min="0.1" max="20" step="0.1"/></div>
+        <div><label for="size">Size</label> <input type="range" id="size" min="0.01" max="1.0" step="0.01"/></div>
     </div>
 </body>
 
