--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
 
 <body id="body">
     <div id="controls">
+        <div style="font-size: 24px">
+            This tool is no longer maintained. It's been added, with new features, 
+            to <a href="https://snazzyfox.github.io/twitch-tools/">Snazzy's Twitch Toolkit</a>.
+        </div>
         <div>Right click anywhere on page to show/hide controls.</div>
         <div><label for="file">Image</label> <input type="file" id="file" accept="image/*"/></div>
         <div><label for="speed">Speed</label> <input type="range" id="speed" min="0.1" max="20" step="0.1"/></div>
